Bug 20117 - Replay resets to start of current portion of lesson, should always jump to 2-1

--- a/Mars_Scaffold2/www/css/mars.css
+++ b/Mars_Scaffold2/www/css/mars.css
@@ -1267,16 +1267,12 @@ div .playbuttonwrapper {
 	z-index: 3;
 	position:absolute; 
 	right:100px;
-	bottom:3px;
+	bottom:1px;
 	text-align: center;
-	line-height: 20px;
-	font-size: 16px;
-	padding:1px 2px;
+	padding:2px 2px 1px 2px;;
 	text-transform: uppercase;
 	font-family: 'Lato', sans-serif;
 	font-weight: bold;
-	line-height: 20px;
-	font-size: 16px;
 	background: rgba(135,153,72,.8);
 	color: rgba(200,200,200,1.0);
     border-radius: 5px;
